Implements end-to-end testing of wehe (#805)
* Adds new script-exporter script to run wehe cli client

* Bumps script-exporter-support image version to v0.2.0

* Generates Prom targets for script-exporter wehe e2e testing

* Fetches Wehe script-exporter targets from GCP into Prom container

* Adds an explict update strategy for script-exporter deployment

* Updates script-exporter to v0.2.1

* Adds EXPERMIENT env var to script-exporter commands

* Temporarily removes the wehe_client script

* Adds back wehe_client to script-exporter config

* Passes a service URL to ndt5_client e2e test

* Removes the -s flag from wehe-cmdline invocation

* Invokes new wehe-client.sh instead of running wehe-cmdline directly

--- a/config/federation/script-exporter/script_exporter.yml
+++ b/config/federation/script-exporter/script_exporter.yml
@@ -1,9 +1,16 @@
+# NOTE: monitoring-token requires these variables in the environment.
+# MONITORING_SIGNER_KEY=<path to signing key>
+# LOCATE_URL=<locate service url>
 scripts:
   - name: 'ndt5_client'
-    # NOTE: monitoring-token requires these variables in the environment.
-    # MONITORING_SIGNER_KEY=<path to signing key>
-    # LOCATE_URL=<locate service url>
-    script: cache_exit_code.sh 600
-      monitoring-token -machine=${TARGET} -service=ndt/ndt5 --
+    script: >
+      EXPERIMENT=ndt5 cache_exit_code.sh 600
+      monitoring-token -machine=${TARGET} -service=ndt/ndt5 -service-url --env-name SERVICE_URL --
       ndt5-client -exit-on-error=1 -exit-on-warning=1 -throttle=196608 -protocol=ndt5+wss
+    timeout: 50
+  - name: 'wehe_client'
+    script: >
+      EXPERIMENT=wehe cache_exit_code.sh 600
+      monitoring-token -machine=${TARGET} -service=wehe/replay --
+      wehe-client.sh -n applemusic -t wehe-cmdline/res/ -c
     timeout: 50
