Configures node-exporter to tolerate outbound-ip nodes

--- a/k8s/prometheus-federation/deployments/node-exporter.yml
+++ b/k8s/prometheus-federation/deployments/node-exporter.yml
@@ -23,3 +23,9 @@ spec:
           name: scrape
       hostNetwork: true
       hostPID: true
+      tolerations:
+      - key: "outbound-ip"
+        operator: "Equal"
+        value: "static"
+        effect: "NoSchedule"
+
