--- a/k8s/prometheus-federation/deployments/node-exporter.yml
+++ b/k8s/prometheus-federation/deployments/node-exporter.yml
@@ -15,8 +15,10 @@ spec:
         prometheus.io/scrape: 'true'
     spec:
       containers:
-      - image: prom/node-exporter
-        name: node-exporter
+      - name: node-exporter
+        image: prom/node-exporter:v1.1.2
+        args:
+        - --collector.processes
         ports:
         - containerPort: 9100
           hostPort: 9100
