Sets updateStrategy to RollingUpdate for node-exporter

--- a/k8s/prometheus-federation/deployments/node-exporter.yml
+++ b/k8s/prometheus-federation/deployments/node-exporter.yml
@@ -6,6 +6,10 @@ spec:
   selector:
     matchLabels:
       run: node-exporter
+  updateStrategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxUnavailable: 1
   template:
     metadata:
       name: node-exporter
