Adds toleration for CAdvisor to run on static-outbound-ip nodes

--- a/k8s/prometheus-federation/deployments/cadvisor.yml
+++ b/k8s/prometheus-federation/deployments/cadvisor.yml
@@ -58,6 +58,11 @@ spec:
             protocol: TCP
       automountServiceAccountToken: false
       terminationGracePeriodSeconds: 30
+      tolerations:
+      - key: "outbound-ip"
+        operator: "Equal"
+        value: "static"
+        effect: "NoSchedule"
       volumes:
       - name: rootfs
         hostPath:
