--- a/k8s/prometheus-federation/deployments/node-exporter.yml
+++ b/k8s/prometheus-federation/deployments/node-exporter.yml
@@ -6,6 +6,10 @@ spec:
   selector:
     matchLabels:
       run: node-exporter
+  updateStrategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxUnavailable: 1
   template:
     metadata:
       name: node-exporter
@@ -15,8 +19,10 @@ spec:
         prometheus.io/scrape: 'true'
     spec:
       containers:
-      - image: prom/node-exporter
-        name: node-exporter
+      - name: node-exporter
+        image: prom/node-exporter:v1.1.2
+        args:
+        - --collector.processes
         ports:
         - containerPort: 9100
           hostPort: 9100
