Sets sessionAffinity=ClientIP for script-exporter service

--- a/k8s/prometheus-federation/services/script-exporter.yml
+++ b/k8s/prometheus-federation/services/script-exporter.yml
@@ -12,5 +12,5 @@ spec:
     targetPort: 9172
   selector:
     run: script-exporter
-  sessionAffinity: None
+  sessionAffinity: ClientIP
   type: ClusterIP
