Scrapes ifInErrors from platform-cluster

--- a/config/federation/prometheus/prometheus.yml.template
+++ b/config/federation/prometheus/prometheus.yml.template
@@ -326,6 +326,7 @@ scrape_configs:
         - 'up{job=~".+"}'
         - 'disco_collect_errors_total'
         - 'ifHCOutOctets{deployment="disco"}'
+        - 'ifInErrors{deployment="disco", ifAlias="uplink"}'
         - 'lame_duck_experiment{job!="node-exporter"}'
         - 'node_boot_time_seconds'
         - 'node_filesystem_size_bytes{deployment="node-exporter"}'
