Adds ifInErrors to the SnmpMetricsMissing alert

--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -1096,7 +1096,7 @@ groups:
 
 # Some SNMP metrics are missing from Prometheus. These should always be present.
   - alert: PlatformCluster_SnmpMetricsMissing
-    expr: absent(ifHCOutOctets)
+    expr: absent(ifHCOutOctets) or absent(ifInErrors)
     for: 30m
     labels:
       repo: ops-tracker
