Fixes the 'cluster' label value for platform scrape job

--- a/config/federation/prometheus/prometheus.yml.template
+++ b/config/federation/prometheus/prometheus.yml.template
@@ -324,7 +324,7 @@ scrape_configs:
     static_configs:
       - targets: ['prometheus-platform-cluster-basicauth.{{PROJECT}}.measurementlab.net:443']
         labels:
-          cluster: "platform-cluster"
+          cluster: "platform"
 
     metric_relabel_configs:
       # Adds an experiment label to lame_duck_experiment metrics for
