--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -814,11 +814,11 @@ groups:
       description: Gardener runs in the "data-processing" cluster.
       dashboard: https://grafana.mlab-oti.measurementlab.net/d/eBbUW6oik/pipeline-gardener?var-project=mlab-oti&var-pipelineDatasource=Data%20Processing%20(mlab-oti)
 
-# GardenerSlowProgress fires when reprocessing is stalled for NDT7
-# The expected rate is actually much higher than 24, but this is a conservative SLO.
+# GardenerSlowProgress fires when reprocessing is stalled
+# The expected rate is actually higher than 5, but this is a conservative SLO.
   - alert: GardenerSlowProgress
     expr: |
-      bq_gardener_dates_fully_parsed_last_day < 24
+      bq_gardener_dates_fully_parsed_last_day < 5
     for: 10m
     labels:
       repo: dev-tracker
