--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -484,6 +484,46 @@ groups:
       description: https://github.com/m-lab/ops-tracker/wiki/Alerts-&-Troubleshooting#PlatformCluster_TooManyServersDown
       dashboard: https://grafana.mlab-oti.measurementlab.net/d/T-t8rWwGz/mlab-ns-prometheus-queries
 
+
+# Alert when the status of IPv6 for any or all machines at a site is down for
+# too long, but *only* when the status of IPv4 is up for the same machine. If
+# IPv4 is up, then IPv6 should be too. However, do not alert on sites that
+# don't even have IPv6 (currently DEL02, LOS02, and TNR01). Also don't alert
+# about a machine when it is in GMX or lame-ducked. The semi abusive use of
+# label_replace() is to extract a site label, because we expect this alert will
+# mostly fire when IPv6 is down for an entire site, and grouping on site will
+# cause only a single alert to fire no matter how many machines at site are
+# affected.
+  - alert: PlatformCluster_IPv6AtSiteDownForTooLong
+    expr: |
+      count by (site) (
+        label_replace(
+          probe_success{service="ndt7_ipv6"} == 0
+            unless on(machine) probe_success{service="ndt7"} == 0,
+          "site", "$1", "machine", "mlab[1-4].([a-z]{3}[0-9]{2}).*"
+        )
+      )
+      unless on(site)
+        probe_success{module="icmp", instance=~"s1.(del02|los02|tnr01).*"}
+      unless on(machine) (
+        label_replace(
+          gmx_machine_maintenance == 1,
+          "site", "$1", "machine", "mlab[1-4].([a-z]{3}[0-9]{2}).*"
+        ) or
+        label_replace(
+          kube_node_spec_taint{cluster="platform", key="lame-duck"},
+          "site", "$1", "node", "mlab[1-4].([a-z]{3}[0-9]{2}).*"
+        )
+      ) > 0
+    for: 24h
+    labels:
+      repo: ops-tracker
+      severity: ticket
+      cluster: prometheus-federation
+    annotations:
+      summary: IPv6 at a site has been down for too long.
+      description: https://github.com/m-lab/ops-tracker/wiki/Alerts-&-Troubleshooting#PlatformCluster_IPv6AtSiteDownForTooLong
+
 # Check 5xx errors for the rate-limiter deployment, too.
   - alert: RateLimiterTooManyServerSideErrors
     expr: |
