--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -505,7 +505,7 @@ groups:
       )
       unless on(site)
         probe_success{module="icmp", instance=~"s1.(del02|los02|tnr01).*"}
-      unless on(machine) (
+      unless on(site) (
         label_replace(
           gmx_machine_maintenance == 1,
           "site", "$1", "machine", "mlab[1-4].([a-z]{3}[0-9]{2}).*"
