--- a/config/federation/prometheus/prometheus.yml.template
+++ b/config/federation/prometheus/prometheus.yml.template
@@ -542,7 +542,7 @@ scrape_configs:
       # Extract the site name from the FQDN of the node/service and drop it
       # into a label named "site'.
       - source_labels: [__address__]
-        regex: .*mlab[1-4]-([a-z]{3}[0-9t]{2}).*
+        regex: .*mlab[1-4]v6-([a-z]{3}[0-9t]{2}).*
         target_label: site
         replacement: ${1}
 
@@ -734,7 +734,7 @@ scrape_configs:
       # Extract the site name from the FQDN of the node/service and drop it
       # into a label named "site'.
       - source_labels: [__address__]
-        regex: .*mlab[1-4]-([a-z]{3}[0-9t]{2}).*
+        regex: .*mlab[1-4]d-([a-z]{3}[0-9t]{2}).*
         target_label: site
         replacement: ${1}
 
