--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -503,7 +503,7 @@ groups:
           gmx_machine_maintenance == 1,
           "site", "$1", "machine", "mlab[1-4].([a-z]{3}[0-9]{2}).*"
         ) or
-        kube_node_spec_taint{cluster="platform", key="lame-duck"},
+        kube_node_spec_taint{cluster="platform", key="lame-duck"}
       ) > 0
     for: 24h
     labels:
