Adds new alert for when IPv6 is down for too long (#836)
* Adds new alert for when IPv6 is down for too long

This commit should resolve the case where IPv6 is down for one or all
machines at a site without anyone knowing about it.

* Matches on 'site' label instead of 'machine' label

* Adds 'site' label to all platform cluster metrics

* Uses correct suffixes for bmc and v6 target rewrites

* Adds a 'site' label to all platform cluster metrics

* Removes two uses of label_replace()

* Removes stray trailing comman from alert query

* Removes yet another stray trailing comma from query

* Bumps GMX to v1.3.3

* Removes all instances of label_replace() in query

Also takes advantage new `ipv6` label in BBE metrics.

* Wraps entire query in "count by (site)"

Wrapping only the first part of the query in "count by (site)" meant
that later parts of the query could only match on the 'site' label,
meaning that any machine at a site in GMX or lame-duck mode could mask
an IPv6 issue for a different machine.

* Makes indention for all unless clauses equal

--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -484,6 +484,29 @@ groups:
       description: https://github.com/m-lab/ops-tracker/wiki/Alerts-&-Troubleshooting#PlatformCluster_TooManyServersDown
       dashboard: https://grafana.mlab-oti.measurementlab.net/d/T-t8rWwGz/mlab-ns-prometheus-queries
 
+
+# Alert when the status of IPv6 for any or all machines at a site is down for
+# too long, but *only* when the status of IPv4 is up for the same machine. If
+# IPv4 is up, then IPv6 should be too.
+  - alert: PlatformCluster_IPv6AtSiteDownForTooLong
+    expr: |
+      count by (site) (
+        probe_success{service="ndt7_ipv6", ipv6="present"} == 0
+          unless on(machine) probe_success{service="ndt7"} == 0
+          unless on(machine) (
+            gmx_machine_maintenance == 1 or
+            kube_node_spec_taint{cluster="platform", key="lame-duck"}
+          )
+      ) > 0
+    for: 24h
+    labels:
+      repo: ops-tracker
+      severity: ticket
+      cluster: prometheus-federation
+    annotations:
+      summary: IPv6 at a site has been down for too long.
+      description: https://github.com/m-lab/ops-tracker/wiki/Alerts-&-Troubleshooting#PlatformCluster_IPv6AtSiteDownForTooLong
+
 # Check 5xx errors for the rate-limiter deployment, too.
   - alert: RateLimiterTooManyServerSideErrors
     expr: |
