--- a/config/federation/prometheus/prometheus.yml.template
+++ b/config/federation/prometheus/prometheus.yml.template
@@ -354,6 +354,13 @@ scrape_configs:
         action: replace
         target_label: machine
 
+      # Extract the a node's site from the node name, and add a new 'site'
+      # label using the value.
+      - source_labels: [node]
+        regex: mlab[1-4]-([a-z]{3}[0-9tc]{2}).*
+        target_label: site
+        replacement: ${1}
+
   # Scrape config for the node_exporter on eb.measurementlab.net.
   - job_name: 'eb-node-exporter'
     static_configs:
@@ -479,6 +486,13 @@ scrape_configs:
         target_label: instance
         replacement: ${1}
 
+      # Extract the site name from the FQDN of the node/service and drop it
+      # into a label named "site'.
+      - source_labels: [__address__]
+        regex: .*mlab[1-4]-([a-z]{3}[0-9t]{2}).*
+        target_label: site
+        replacement: ${1}
+
       # Since __address__ is the target that prometheus scrapes,
       # unconditionally reset the __address__ label to the blackbox exporter
       # address.
@@ -530,6 +544,13 @@ scrape_configs:
       - source_labels: [__address__]
         regex: (.*)
         target_label: __param_target
+        replacement: ${1}
+
+      # Extract the site name from the FQDN of the node/service and drop it
+      # into a label named "site'.
+      - source_labels: [__address__]
+        regex: .*mlab[1-4]v6-([a-z]{3}[0-9t]{2}).*
+        target_label: site
         replacement: ${1}
 
       # Use the "module" label defined in the input file as the module name for
@@ -633,6 +654,13 @@ scrape_configs:
         target_label: __param_target
         replacement: ${1}
 
+      # Extract the site name from the FQDN of the node/service and drop it
+      # into a label named "site'.
+      - source_labels: [__address__]
+        regex: .*mlab[1-4]-([a-z]{3}[0-9t]{2}).*
+        target_label: site
+        replacement: ${1}
+
       # Since __address__ is the target that prometheus will contact,
       # unconditionally reset the __address__ label to the script_exporter
       # address.
@@ -708,6 +736,13 @@ scrape_configs:
       - source_labels: [__address__]
         regex: (.*)
         target_label: __param_target
+        replacement: ${1}
+
+      # Extract the site name from the FQDN of the node/service and drop it
+      # into a label named "site'.
+      - source_labels: [__address__]
+        regex: .*mlab[1-4]d-([a-z]{3}[0-9t]{2}).*
+        target_label: site
         replacement: ${1}
 
       # Since __address__ is the target that prometheus will contact,
