--- a/config/federation/bigquery/bq_gardener_parse_time.sql.template
+++ b/config/federation/bigquery/bq_gardener_parse_time.sql.template
@@ -43,6 +43,10 @@ FROM (
     FROM   `{{PROJECT}}.raw_ndt.annotation`
     WHERE date > date('2019-01-01')
   UNION ALL
+    SELECT "ndt/hopannotation1" AS datatype, MIN(Parser.Time) AS min_parse_time
+    FROM   `{{PROJECT}}.raw_ndt.hopannotation1`
+    WHERE date > date('2019-01-01')
+  UNION ALL
     SELECT "ndt/pcap" AS datatype, MIN(Parser.Time) AS min_parse_time
     FROM   `{{PROJECT}}.raw_ndt.pcap`
     WHERE date > date('2019-01-01')
