Reinstalls ca-certificates before install/build

--- a/.travis.yml
+++ b/.travis.yml
@@ -160,3 +160,5 @@ before_install:
 - sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 6B05F25D762E3157
 - sudo apt-get -qq update
 - sudo apt-get install -y apache2-utils jq
+- sudo apt-get reinstall -y ca-certificates
+
