--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -1206,3 +1206,30 @@ groups:
         retrieved due to permission issues. Please check that the switch is
         currently reachable and the switch-monitoring user exists and has the
         right privileges.
+
+# PrometheusPersistentDiskTooFull fires when the persistent
+# disk mounted on the Prometheus VM gets too full (less than 5% free).
+# TODO(cristinaleon): Add an alerts configuration to the data-processing instance
+# that includes its own version of this alert.
+  - alert: PrometheusPersistentDiskTooFull
+    expr: |
+      ((node_filesystem_avail_bytes{cluster="data-processing", mountpoint="/prometheus"}
+        / node_filesystem_size_bytes{cluster="data-processing", mountpoint="/prometheus"}) < 0.05) OR
+      ((node_filesystem_avail_bytes{cluster="prometheus-federation", mountpoint="/prometheus"}
+        / node_filesystem_size_bytes{cluster="prometheus-federation", mountpoint="/prometheus"}) < 0.05)
+    for: 1m
+    labels:
+      repo: ops-tracker
+      severity: ticket
+      cluster: prometheus-federation
+    annotations:
+      summary: The Prometheus persistent disk has less than 5% free space.
+      description: >
+        The Prometheus persistent disk has less than 5% free space.
+        Investigate filesystem usage on the VM, but most likely if this alert
+        fires it means that the size of the persistent disk is too small and
+        may need to be increased. GCE persistent disks can be resized, even on
+        a running VM. Please refer to the [instructions on how to do this][1].
+        [1]: https://github.com/m-lab/k8s-support/blob/master/manage-cluster/PROMETHEUS.md#resizing-the-prometheus-vms-disk
+      dashboard: https://grafana.mlab-oti.measurementlab.net/d/sVklmeHik/prometheus-self-monitoring?orgId=1&var-datasource=default
+
