--- a/k8s/prometheus-federation/deployments/external-dns.yml
+++ b/k8s/prometheus-federation/deployments/external-dns.yml
@@ -19,7 +19,7 @@ spec:
       serviceAccountName: external-dns
       containers:
       - name: external-dns
-        image: registry.opensource.zalan.do/teapot/external-dns:v0.5.17
+        image: k8s.gcr.io/external-dns/external-dns:v0.10.1
         # domain-filter is the zone we want to manage. txt-owner-id is an
         # arbitrary identifier used to track who created each entry (scoped
         # here to the cluster, in case we end up using more than one
