Updates version for kubeip deployment

--- a/k8s/prometheus-federation/deployments/kubeip.yml
+++ b/k8s/prometheus-federation/deployments/kubeip.yml
@@ -16,7 +16,7 @@ spec:
         priorityClassName: system-cluster-critical
         containers:
         - name: "kubeip"
-          image: doitintl/kubeip:issue-34
+          image: doitintl/kubeip:v1.0.0
           imagePullPolicy: Always
           volumeMounts:
           - name: google-cloud-key
