--- a/k8s/prometheus-federation/deployments/kubeip.yml
+++ b/k8s/prometheus-federation/deployments/kubeip.yml
@@ -8,6 +8,8 @@ spec:
   selector:
     matchLabels:
       app: kubeip
+  strategy:
+    type: Recreate
   template:
       metadata:
         labels:
