--- a/k8s/prometheus-federation/roles/rbac-kubeip.yml
+++ b/k8s/prometheus-federation/roles/rbac-kubeip.yml
@@ -3,12 +3,14 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: kubeip
+  namespace: kube-system
 ---
 # Allow kubeIP to keep an eye on nodes and pods
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: kubeip
+  namespace: kube-system
 rules:
 - apiGroups: [""]
   resources: ["nodes"]
