Updates container image versions for external-dns and kubeip deployments (#851)
* Updates repo and version for external-dns deployment

* Updates version for kubeip deployment

* Sets strategy to Recreate for kubeip deployment

When you only have a single replica in a deployment, a rolling update
doesn't always make the most sense, especially if the service isn't user
facing. This change sets the update strategy for the kubeip deployment
to a simple "Recreate", which will just delete the old pod and create a
new one.

* Moves kubeip deployment to kube-system namespace

* Moves kubeip SA to kube-system namespace

--- a/k8s/prometheus-federation/deployments/kubeip.yml
+++ b/k8s/prometheus-federation/deployments/kubeip.yml
@@ -2,12 +2,14 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: kubeip
-  namespace: default
+  namespace: kube-system
 spec:
   replicas: 1
   selector:
     matchLabels:
       app: kubeip
+  strategy:
+    type: Recreate
   template:
       metadata:
         labels:
@@ -16,7 +18,7 @@ spec:
         priorityClassName: system-cluster-critical
         containers:
         - name: "kubeip"
-          image: doitintl/kubeip:issue-34
+          image: doitintl/kubeip:v1.0.0
           imagePullPolicy: Always
           volumeMounts:
           - name: google-cloud-key
