--- a/config/federation/prometheus/prometheus.yml.template
+++ b/config/federation/prometheus/prometheus.yml.template
@@ -389,8 +389,8 @@ scrape_configs:
       'match[]':
         - 'up{container="etl-gardener",instance=~".*:9090"}'
         - 'up{container="etl-parser",instance=~".*:9090"}'
-        - 'container_fs_limit_bytes{container_label_run="prometheus-server"}'
-        - 'container_fs_usage_bytes{container_label_run="prometheus-server"}'
+        - 'kubelet_volume_stats_used_bytes{persistentvolumeclaim="auto-prometheus-ssd0"}'
+        - 'kubelet_volume_stats_capacity_bytes{persistentvolumeclaim="auto-prometheus-ssd0"}'
     static_configs:
       - targets: ['prometheus-data-processing.{{PROJECT}}.measurementlab.net:9090']
 
