Puts alert template inside double quotes

--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -1221,7 +1221,7 @@ groups:
     labels:
       repo: ops-tracker
       severity: ticket
-      cluster: {{ $labels.cluster }}
+      cluster: "{{ $labels.cluster }}"
     annotations:
       summary: The Prometheus persistent disk has less than 5% free space.
       description: https://github.com/m-lab/ops-tracker/wiki/Alerts-&-Troubleshooting#prometheuspersistentdisktoofull
