Add queries to bigquery-exporter-5m

--- a/k8s/prometheus-federation/deployments/bigquery-exporter-5m.yml
+++ b/k8s/prometheus-federation/deployments/bigquery-exporter-5m.yml
@@ -22,6 +22,7 @@ spec:
                 "-gauge-query=/queries/bq_mlabns_ratelimit.sql",
                 "-gauge-query=/queries/bq_ndt_s2c.sql",
                 "-gauge-query=/queries/bq_billing_hourly.sql",
+                "-gauge-query=/queries/bq_gardener_historical.sql"
               ]
         ports:
         - containerPort: 9348
