--- a/config/federation/bigquery/bq_gardener_historical.sql.template
+++ b/config/federation/bigquery/bq_gardener_historical.sql.template
@@ -66,7 +66,7 @@ WITH all_types AS (
   WHERE date > date('2019-03-28')
 ),
 
-SELECT datatype, date, COUNT(id) AS value_historical_throughput
+SELECT datatype, date, COUNT(id) AS value_throughput
 FROM all_types
 WHERE parseTime BETWEEN TIMESTAMP_SUB(CURRENT_TIMESTAMP(), INTERVAL 24 HOUR)
     AND CURRENT_TIMESTAMP()
