--- a/k8s/prometheus-federation/deployments/prometheus.yml
+++ b/k8s/prometheus-federation/deployments/prometheus.yml
@@ -46,7 +46,7 @@ spec:
       containers:
       # Check https://hub.docker.com/r/prom/prometheus/tags/ for the current
       # stable version.
-      - image: prom/prometheus:v2.14.0
+      - image: prom/prometheus:v2.31.1
         # Note: the container name appears to be ignored and the actual pod name
         # is derived from the Deployment.metadata.name. However, removing this
         # value results in a configuration error.
@@ -54,7 +54,7 @@ spec:
         # Note: Set retention time to 120 days. (default retention is 30d).
         args: ["--config.file=/etc/prometheus/prometheus.yml",
                "--storage.tsdb.path=/prometheus",
-               "--storage.tsdb.retention.time=2880h",
+               "--storage.tsdb.retention.time=120d",
                "--web.enable-lifecycle",
                "--web.external-url=https://prometheus.{{GCLOUD_PROJECT}}.measurementlab.net"]
         ports:
