--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -854,7 +854,7 @@ groups:
 
   - alert: GardenerHistoricalThroughputIsStalled
     expr: |
-      gardener_up_to_date == 1
+      gardener_up_to_date[1d] == 1
         UNLESS ON(datatype, date) bq_gardener_historical_throughput > 0
     for: 1m
     labels:
