--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -854,7 +854,7 @@ groups:
 
   - alert: GardenerHistoricalThroughputIsStalled
     expr: |
-      (gardener_up_to_date > 0)[1d:]
+      last_over_time(gardener_up_to_date[24h]) == 1
         UNLESS ON(datatype, date) bq_gardener_historical_throughput > 0
     for: 1m
     labels:
