--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -851,7 +851,7 @@ groups:
 #     annotations:
 #       summary: Gardener historical throughput below 1 for {{ $labels.datatype }}.
 #       description: Gardener runs in the "data-processing" cluster.
-      dashboard: https://grafana.mlab-oti.measurementlab.net/d/eBbUW6oik/pipeline-gardener?var-project=mlab-oti&var-pipelineDatasource=Data%20Processing%20(mlab-oti)
+#      dashboard: https://grafana.mlab-oti.measurementlab.net/d/eBbUW6oik/pipeline-gardener?var-project=mlab-oti&var-pipelineDatasource=Data%20Processing%20(mlab-oti)
 
 # GardenerFailureRateTooHighOrMissing fires when the number of failed Gardener jobs
 # in the last day rises above 1% or the number of total jobs is not reported.
