--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -839,19 +839,19 @@ groups:
 
 # GardenerHistoricalThroughputIsStalled fires when historical reprocessing for
 # datatypes under processing by the v2 pipeline falls below 1 date / day.
-#  - alert: GardenerHistoricalThroughputIsStalled
-#     expr: increase(gardener_jobs_total{status="success"}[1d]) > 0
-#              UNLESS ON(datatype)
-#                 bq_gardener_historical_throughput > 0
-#     for: 10m
-#     labels:
-#       repo: dev-tracker
-#       severity: ticket
-#       cluster: prometheus-federation
-#     annotations:
-#       summary: Gardener historical throughput below 1 for {{ $labels.datatype }}.
-#       description: Gardener runs in the "data-processing" cluster.
-#      dashboard: https://grafana.mlab-oti.measurementlab.net/d/eBbUW6oik/pipeline-gardener?var-project=mlab-oti&var-pipelineDatasource=Data%20Processing%20(mlab-oti)
+  - alert: GardenerHistoricalThroughputIsStalled
+    expr: |
+      increase(gardener_jobs_total{status="success"}[1d]) > 0
+        UNLESS ON(datatype) bq_gardener_historical_throughput > 0
+    for: 10m
+    labels:
+      repo: dev-tracker
+      severity: ticket
+      cluster: prometheus-federation
+    annotations:
+      summary: Gardener historical throughput below 1 for {{ $labels.datatype }}.
+      description: Gardener runs in the "data-processing" cluster.
+      dashboard: https://grafana.mlab-oti.measurementlab.net/d/eBbUW6oik/pipeline-gardener?var-project=mlab-oti&var-pipelineDatasource=Data%20Processing%20(mlab-oti)
 
 # GardenerFailureRateTooHighOrMissing fires when the number of failed Gardener jobs
 # in the last day rises above 1% or the number of total jobs is not reported.
