Fix datatype names in query

--- a/config/federation/bigquery/bq_gardener_historical.sql.template
+++ b/config/federation/bigquery/bq_gardener_historical.sql.template
@@ -4,7 +4,7 @@
 
 WITH all_types AS (
   SELECT
-    "raw_ndt.ndt7" AS datatype,
+    "ndt7" AS datatype,
     id,
     date,
     parser.Time as parseTime,
@@ -13,7 +13,7 @@ WITH all_types AS (
   WHERE date > date('2019-01-01')
   UNION ALL
   SELECT
-    "raw_ndt.annotation" AS datatype,
+    "annotation" AS datatype,
     id,
     date,
     parser.Time as parseTime,
@@ -22,7 +22,7 @@ WITH all_types AS (
   WHERE date > date('2019-01-01')
   UNION ALL
   SELECT
-    "raw_ndt.hopannotation1" AS datatype,
+    "hopannotation1" AS datatype,
     id,
     date,
     parser.Time as parseTime,
@@ -31,7 +31,7 @@ WITH all_types AS (
   WHERE date > date('2019-01-01')
   UNION ALL
   SELECT
-    "raw_ndt.pcap" AS datatype,
+    "pcap" AS datatype,
     id,
     date,
     parser.Time as parseTime,
@@ -40,7 +40,7 @@ WITH all_types AS (
   WHERE date > date('2019-01-01')
   UNION ALL
   SELECT
-    "raw_ndt.scamper1" AS datatype,
+    "scamper1" AS datatype,
     id,
     date,
     parser.Time as parseTime,
