--- a/config/federation/bigquery/bq_gardener_historical.sql.template
+++ b/config/federation/bigquery/bq_gardener_historical.sql.template
@@ -60,6 +60,6 @@ FROM
   all_types
 WHERE
   (parseTime BETWEEN TIMESTAMP_SUB(CURRENT_TIMESTAMP(), INTERVAL 24 HOUR) AND CURRENT_TIMESTAMP())
-  AND date < DATE_SUB(CURRENT_DATE(), INTERVAL 1 DAY) -- exclude daily.
+  AND date < DATE_SUB(parseTime, INTERVAL 1 DAY) -- exclude daily.
 GROUP BY
   datatype
