--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -867,7 +867,7 @@ groups:
       severity: ticket
       cluster: prometheus-federation
     annotations:
-      summary: {{ $labels.datatype }} datatype in Gardener config missing in bq_gardener_historical_throughput query.
+      summary: Datatype {{ $labels.datatype }} in Gardener config missing in bq_gardener_historical_throughput query.
       description: A Gardener configured datatype was not discovered by the bq_gardener_historical_throughput
         metric in BigQuery Exporter. Check the query to make sure that all the datatypes configured in the Gardener
         exist in the query.
