Add wiki entry for Cloud_TooManyAppEngineVersions (#859)
Move alert description for Cloud_TooManyAppEngineVersions to the Alerts and troubleshooting wiki.

--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -983,9 +983,7 @@ groups:
       cluster: prometheus-federation
     annotations:
       summary: Too many AppEngine versions for the project.
-      description: AppEngine has a project maximum of 210 versions across all
-        services. Until old versions are deleted, future deployments will begin
-        to fail. Please delete them or create a tool that does it automatically.
+      description: https://github.com/m-lab/ops-tracker/wiki/Alerts-&-Troubleshooting#cloud_toomanyappengineversions
       dashboard: https://grafana.mlab-oti.measurementlab.net/d/Yor77urmk/cloud-appengine
 
 # Cloud_TooManyInactiveInstances checks that all running instances are active
